--- a/myStyles.css
+++ b/myStyles.css
@@ -5,25 +5,39 @@
 	height: 200px;
 } */
 
-.menuItems {
-	float: right;
-	width: 500px;
-
-}
-
-li a:focus {
-	outline: 0;
-	background-color: yellow;
-	display: block;
-}
-
 .picture {
 	border-radius:50%;
 	width: 300px;
-	height: 300px;
-	margin: 0 auto 20px;
+	height: 350px;
+	margin: 80px auto 20px;
 }
 
 header {
 	text-align: center;
 }
+
+.section{
+	padding: 100px;
+}
+
+.heading {
+	text-align: center;
+	padding-bottom: 15x;
+	line-height: 3em;
+	font-family: oswald, sans-serif;
+}
+
+.about p {
+	font-size: 28px;
+}
+
+#about {
+	background-color: #D6DBDF;
+}
+
+.name {
+	font-size: 30px;
+}
+
+
+
