--- a/myStyles.css
+++ b/myStyles.css
@@ -39,5 +39,16 @@ header {
 	font-size: 30px;
 }
 
+.skills img {
+	width: 250px;
+	height: 250px;
+	margin: 20px auto 20px;
+}
+
+.volleyball {
+	width: 500px;
+	height: 350px;
+}
+
 
 
